@@ -3,6 +3,12 @@ version 1.2.7
   English strings when LANG would indicate translation;
   also recognize environment variable GRETL_LANG: if this
   is "english" or "C", run in English
+- allow for missing values (silent) in audio graphs
+- add a few keystrokes to the main gretl window:
+  'a': audio (read list of variables)
+  'x': stop audio
+  'e': edit attributes of current variable
+  't': plot current variable
 
 5/25/2004 version 1.2.6
 - add Hodrick-Prescott filter, as "hpfilt" function in the
